--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     border: 0 solid transparent;
+    font-family: Montserrat, serif;
 }
 
 html {
@@ -170,10 +171,17 @@ textarea {vertical-align: top;overflow: auto;
 }
 
 .header-subdirectory-list li{
-    width: max-content;
+    width: 100%;
     padding: 15px 20px;
 }
 
 .header-subdirectory-list li:hover{
     background-color: #DE3246;
+}
+
+.header-button{
+    border-radius: 5px;
+    border: 2px solid #DE3246;
+    padding: 15px 35px;
+    margin: 25px;
 }
