--- a/css/index.css
+++ b/css/index.css
@@ -120,3 +120,58 @@
 .choose-us li{
     margin: 30px 0;
 }
+
+.news{
+    width: max-content;
+    margin: auto auto;
+    position: relative;
+    height: 450px;
+}
+
+.news .news-title{
+    width: max-content;
+    margin: 90px auto 50px auto;
+    color: #423B39;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.news-contain li{
+    display: inline-block;
+    width: 15vw;
+    height: 230px;
+    margin: 0 10px;
+    background-color: #F1EFEE;
+    float: left;
+    position: relative;
+    padding: 20px 10px;
+}
+
+.news-data-title{
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.news-data-date{
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.all-news-button{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 15px 35px;
+    border-radius: 5px;
+    border: 2px solid #DE3246;
+}
